--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -5,7 +5,10 @@
 <head>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta charset="utf-8"/>
-<title>Distribuidora mayorista de productos de limpieza en CABA | Barretodo</title>
+<title>Catálogo distribuidora de productos de limpieza | Barretodo CABA</title>
+   <meta name="description">: Armá tu pedido mayorista de limpieza. Entregas 24–48 h en CABA, 3 cuotas sin interés y asesoramiento por WhatsApp.
+
+<link rel="canonical" href="https://barretodo.com.ar/catalogo/">
 <style>
     * { box-sizing: border-box; }
     body { font-family: Arial, sans-serif; }
@@ -112,6 +115,14 @@
 <body style="background-color:#f4f4f4;">
 <div style="text-align:center;margin-top:20px;"><img alt="Logo" loading="lazy" src="logo-barretodo.jpeg" width="180"/></div>
 <h1>Catálogo interactivo BARRETODO</h1>
+
+   <div class="mensaje-descuento" style="
+  background:#f7f3ec; border:1px solid #eadfc8; color:#1F2D2C;
+  padding:10px 16px; border-radius:12px; max-width:900px; margin:12px auto;">
+  <strong>Mayorista real en CABA:</strong> entregas en 24–48 h · todos los medios de pago · Asesoramiento por WhatsApp
+</div>
+
+   
 <div class="mensaje-descuento">
   5% de descuento en compras mayores a $250.000 (SURTIDAS)<br/>
   10% de descuento en compras mayores a $500.000 (SURTIDAS)
