--- a/pages/productos.html
+++ b/pages/productos.html
@@ -87,8 +87,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="concentrados">×</button>
 <h3 id="modal-title-concentrados">Concentrados</h3>
-<p>Desengrasantes, detergentes industriales, desinfectantes, multiuso. Presentaciones 1L / 5L / 20L.</p>
-<ul class="modal-list"><li>Desengrasante industrial</li><li>Detergente concentrado</li><li>Desinfectante</li><li>Multiuso</li></ul>
+<p>Desengrasantes, detergentes, desinfectantes, limpiadores multiuso. Presentaciones 1L / 5L .</p>
+<ul class="modal-list"><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina pura</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li><li>Alcohol 70°/96° cereal / tridestilado / gel</li><li>Vinagre de limpieza</li><li>Limpia tapizados / Destapa cañerias</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
@@ -100,8 +100,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="descartables">×</button>
 <h3 id="modal-title-descartables">Descartables</h3>
-<p>Bolsón papel higiénico 30 rollos (distintos metrajes), servilletas, bolsas, guantes.</p>
-<ul class="modal-list"><li>Bolsón papel higiénico 30 rollos</li><li>Servilletas</li><li>Bolsas de residuos</li><li>Guantes</li></ul>
+<p>Bolsón papel higiénico 30 rollos (distintos metrajes), caja toallas intercaladas, bolsas distintos tipos, tamaños y colores, guantes.</p>
+<ul class="modal-list"><li>Bolsón papel higiénico 30 rollos</li><li>Bolson papel cocina</li><li>Papel higienico jumbo x8 (200m y 300m) (Insitucional)</li><li>Guantes latex / nitrilo</li><li>Bolsa de residuo negra/verde/transparente</li><li>Bolsa de escombro negra/transparente</li><li>Papel toallas intercaladas blancas / beage</li><li>Barbijos</li><li>Bolsa de arranque</li><li>Bolsa camiseta</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
@@ -113,8 +113,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="dispenser">×</button>
 <h3 id="modal-title-dispenser">Dispenser</h3>
-<p>Equipos y recargas para jabón líquido, papel toalla, papel higiénico institucional, alcohol en gel.</p>
-<ul class="modal-list"><li>Dispensers de jabón</li><li>Papel toalla</li><li>Papel higiénico institucional</li><li>Alcohol en gel</li></ul>
+<p>Equipos para jabón líquido, papel toalla intercaladas, papel higiénico institucional, alcohol en gel.</p>
+<ul class="modal-list"><li>Dispensers de jabón y alcohol en gel</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para papel bobina</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
@@ -126,8 +126,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="herramientas">×</button>
 <h3 id="modal-title-herramientas">Herramientas</h3>
-<p>Palas, escobas, fibras, trapos, baldes, mopas, carritos (hogar y profesional).</p>
-<ul class="modal-list"><li>Escobas y palas</li><li>Fibras y trapos</li><li>Baldes y mopas</li><li>Carritos</li></ul>
+<p>Palas, escobas, trapos, baldes, mopas, tachos de basura (hogar y profesional).</p>
+<ul class="modal-list"><li>Esponjas lava platos, acero, lana acero</li><li>Escobas, escobillones y plumeros</li><li>Palas de mano y con palo</li><li>Trapos de piso, rejillas, repasadores, microfibras</li><li>Secadores, lampazos y mopas</li><li>Tachos de basura y baldes</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
@@ -139,8 +139,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="aromatizacion">×</button>
 <h3 id="modal-title-aromatizacion">Aromatización</h3>
-<p>Difusores, fragancias concentradas y ambientales.</p>
-<ul class="modal-list"><li>Difusores</li><li>Fragancias concentradas</li><li>Ambientales</li></ul>
+<p>Difusores, perfuminas, fragancias concentradas y ambientales. 1L / 5L.</p>
+<ul class="modal-list"><li>Perfumina textil y de ambiente (varios aromas)</li><li>Aromatizadores de ambiente en aerosol</li><li>Difusores de ambiente</li><li>Equipos de aromatizacion</li><li>Sahumerios y aceites para horniltos</li><li>Aromatizacion de autos</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
@@ -152,8 +152,8 @@
 <div class="modal-content">
 <button aria-label="Cerrar" class="modal-close" data-close="insecticidas">×</button>
 <h3 id="modal-title-insecticidas">Insecticidas</h3>
-<p>Aerosoles, líquidos y cebos de marcas líderes.</p>
-<ul class="modal-list"><li>Aerosoles</li><li>Líquidos</li><li>Cebos</li></ul>
+<p>Derribantes y repelentes en aerosol y liquidos para control de plagas.</p>
+<ul class="modal-list"><li>Repelentes aerosol, crema y liquidos</li><li>Repelntes naturales (aceite citronella)</li><li>Derribantes liquidos (control de plagas)</li><li>Derribantes aerosol</li></ul>
 <div class="cta-row">
 <a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
