--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -132,7 +132,7 @@
 <div class="container cta-band-inner">
 <h2>¿Querés simplificar tus compras de limpieza?</h2>
 <div class="cta-row">
-<a a="" ahora!<="" class="btn btn-primary" href="../catalogo/index.html" presupuesto="" ¡cotizá="">
+<a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">Escribinos por WhatsApp</a>
 </a></div>
 </div>
