Add catalog download link to index.html
Added a link to download the catalog PDF.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,15 @@
 <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
 <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
 <div class="cta-row">
-<a class="btn btn-primary" href="pages/productos.html">CONOCÉ NUESTROS PRODUCTOS</a>
-<a class="btn btn-secondary" href="catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
+<a
+  class="btn btn-primary"
+  href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf"
+  target="_blank"
+  rel="noopener"
+  download="Catalogo-Barretodo.pdf"
+>
+  DESCARGAR CATÁLOGO
+</a>
 <a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">COMUNICATE AHORA</a>
 </div>
 </div>
