--- a/index.html
+++ b/index.html
@@ -67,15 +67,7 @@
 <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
 <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
 <div class="cta-row">
-<a
-  class="btn btn-primary"
-  href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf"
-  target="_blank"
-  rel="noopener"
-  download="Catalogo-Barretodo.pdf"
->
-  DESCARGAR CATÁLOGO
-</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">DESCARGAR CATÁLOGO</a>
 <a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">COMUNICATE AHORA</a>
 </div>
 </div>
@@ -180,7 +172,7 @@
 <div class="container cta-band-inner">
 <h2>¿Necesitás una cotización? Respondemos hoy</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">DESCARGAR CATÁLOGO</a>
 <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
 </div>
 </div>
@@ -255,7 +247,7 @@
 <p>Desengrasantes, detergentes, desinfectantes, limpiadores multiuso. Presentaciones 1L / 5L .</p>
 <ul class="modal-list"><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina pura</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li><li>Alcohol 70°/96° cereal / tridestilado / gel</li><li>Vinagre de limpieza</li><li>Limpia tapizados / Destapa cañerias</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="catalogo/index.html">Ver catálogo</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">DESCARGAR CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
 </div>
 </div>
