--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h1>Distribuidora mayorista de productos de limpieza en CABA</h1>
 <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
 <div class="cta-row">
-<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">DESCARGAR CATÁLOGO</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
 <a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">COMUNICATE AHORA</a>
 </div>
 </div>
@@ -172,7 +172,7 @@
 <div class="container cta-band-inner">
 <h2>¿Necesitás una cotización? Respondemos hoy</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">DESCARGAR CATÁLOGO</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
 <a class="btn btn-secondary" href="pages/contacto.html">Escribinos por WhatsApp</a>
 </div>
 </div>
