Update WhatsApp button text with emoji

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p class="subtitle">Abastecemos empresas, consorcios y hogares. Entregas rápidas en 24–48 h y atención por WhatsApp.”</p>
 <div class="cta-row">
 <a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
-<a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">COMUNICATE AHORA</a>
+<a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">💬 COMUNICATE AHORA</a>
 </div>
 </div>
 </section>
