Update buttons and links in productos.html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -76,8 +76,8 @@
 <div class="container cta-band-inner">
 <h2>¿Querés simplificar tus compras de limpieza?</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">Escribinos por WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
+<a class="btn btn-secondary" href="pages/contacto.html">💬 Escribinos por WhatsApp</a>
 </div>
 </div>
 </section>
@@ -90,8 +90,8 @@
 <p>Desengrasantes, detergentes, desinfectantes, limpiadores multiuso. Presentaciones 1L / 5L .</p>
 <ul class="modal-list"><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina pura</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li><li>Alcohol 70°/96° cereal / tridestilado / gel</li><li>Vinagre de limpieza</li><li>Limpia tapizados / Destapa cañerias</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
@@ -103,8 +103,8 @@
 <p>Bolsón papel higiénico 30 rollos (distintos metrajes), caja toallas intercaladas, bolsas distintos tipos, tamaños y colores, guantes.</p>
 <ul class="modal-list"><li>Bolsón papel higiénico 30 rollos</li><li>Bolson papel cocina</li><li>Papel higienico jumbo x8 (200m y 300m) (Insitucional)</li><li>Guantes latex / nitrilo</li><li>Bolsa de residuo negra/verde/transparente</li><li>Bolsa de escombro negra/transparente</li><li>Papel toallas intercaladas blancas / beage</li><li>Barbijos</li><li>Bolsa de arranque</li><li>Bolsa camiseta</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
@@ -116,8 +116,8 @@
 <p>Equipos para jabón líquido, papel toalla intercaladas, papel higiénico institucional, alcohol en gel.</p>
 <ul class="modal-list"><li>Dispensers de jabón y alcohol en gel</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para papel bobina</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
@@ -129,8 +129,8 @@
 <p>Palas, escobas, trapos, baldes, mopas, tachos de basura (hogar y profesional).</p>
 <ul class="modal-list"><li>Esponjas lava platos, acero, lana acero</li><li>Escobas, escobillones y plumeros</li><li>Palas de mano y con palo</li><li>Trapos de piso, rejillas, repasadores, microfibras</li><li>Secadores, lampazos y mopas</li><li>Tachos de basura y baldes</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
@@ -142,8 +142,8 @@
 <p>Difusores, perfuminas, fragancias concentradas y ambientales. 1L / 5L.</p>
 <ul class="modal-list"><li>Perfumina textil y de ambiente (varios aromas)</li><li>Aromatizadores de ambiente en aerosol</li><li>Difusores de ambiente</li><li>Equipos de aromatizacion</li><li>Sahumerios y aceites para horniltos</li><li>Aromatizacion de autos</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
@@ -155,8 +155,8 @@
 <p>Derribantes y repelentes en aerosol y liquidos para control de plagas.</p>
 <ul class="modal-list"><li>Repelentes aerosol, crema y liquidos</li><li>Repelntes naturales (aceite citronella)</li><li>Derribantes liquidos (control de plagas)</li><li>Derribantes aerosol</li></ul>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">Ver catálogo</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 CATÁLOGO</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
 </div>
