--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -74,8 +74,8 @@
 <div class="container cta-band-inner">
 <h2>¿Querés simplificar tus compras de limpieza?</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
-<a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">Escribinos por WhatsApp</a>
+<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
+<a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">💬 COMUNICATE AHORA</a>
 </div>
 </div>
 </section>
