--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <h2>¿Necesitás una cotización? Respondemos hoy</h2>
 <div class="cta-row">
 <a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
-<a class="btn btn-secondary" href="pages/contacto.html">💬 Escribinos por WhatsApp</a>
+<a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información">💬 Escribinos por WhatsApp</a>
 </div>
 </div>
 </section>
