Update footer link to point to PDF catalog

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -134,7 +134,7 @@
 <div class="footer-bottom">
 <nav class="f-links">
 <a href="/productos.html">Productos</a>
-<a href="/catalogo.html">Catálogo</a>
+<a href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">Catálogo</a>
 <a href="/contacto.html">Contacto</a>
 </nav>
 <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
