Update catalog link to download PDF version

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -95,7 +95,7 @@
 <div class="container cta-band-inner">
 <h2>¿Querés simplificar tus compras de limpieza?</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="../catalogo/index.html">¡COTIZÁ PRESUPUESTO AHORA!</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 DESCARGAR CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20un%20presupuesto" rel="noopener" target="_blank">Escribinos por WhatsApp</a>
 </div>
 </div>
@@ -152,7 +152,7 @@
 <div class="footer-bottom">
 <nav class="f-links">
 <a href="/productos.html">Productos</a>
-<a href="/catalogo.html">Catálogo</a>
+<a href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">Catálogo</a>
 <a href="/contacto.html">Contacto</a>
 </nav>
 <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
