--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -132,7 +132,7 @@
 <div class="container cta-band-inner">
 <h2>¿Querés simplificar tus compras de limpieza?</h2>
 <div class="cta-row">
-<a class="btn btn-primary" href="https://bit.ly/catalogo-barretodo" target="_blank" rel="noopener">📥 DESCARGAR CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 DESCARGAR CATÁLOGO</a>
 <a class="btn btn-whatsapp" href="https://wa.me/541151022954?text=Hola%20Barretodo%2C%20quiero%20más%20información" rel="noopener" target="_blank">💬 COMUNICATE AHORA</a>
 </a></div>
 </div>
@@ -188,7 +188,7 @@
 <div class="footer-bottom">
 <nav class="f-links">
 <a href="/productos.html">Productos</a>
-<a href="/catalogo.html">Catálogo</a>
+<a href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf">Catálogo</a>
 <a href="/contacto.html">Contacto</a>
 </nav>
 <div class="f-copy">© 2025 Barretodo. Todos los derechos reservados.</div>
