--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <p>Desengrasantes, detergentes, desinfectantes, limpiadores multiuso. Presentaciones 1L / 5L .</p>
 <ul class="modal-list"><li>Limpiador multisuperficie</li><li>Detergente concentrado (con aroma o neutro)</li><li>Lavandina (tambien en gel) y Cloro</li><li>Desengrasante cocina / industrial</li><li>Jabon para manos</li><li>Limpiador vidrio</li><li>Limpiador cremoso</li><li>Cera mosaico / ceramica</li><li>Acaroina pura</li><li>Jabon y Suavizante para ropa</li><li>Bicarbonato y Percarbonato de sodio</li><li>Alcohol 70°/96° cereal / tridestilado / gel</li><li>Vinagre de limpieza</li><li>Limpia tapizados / Destapa cañerias</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
@@ -260,7 +260,7 @@
 <p>Bolsón papel higiénico 30 rollos (distintos metrajes), caja toallas intercaladas, bolsas distintos tipos, tamaños y colores, guantes.</p>
 <ul class="modal-list"><li>Bolsón papel higiénico 30 rollos</li><li>Bolson papel cocina</li><li>Papel higienico jumbo x8 (200m y 300m) (Insitucional)</li><li>Guantes latex / nitrilo</li><li>Bolsa de residuo negra/verde/transparente</li><li>Bolsa de escombro negra/transparente</li><li>Papel toallas intercaladas blancas / beage</li><li>Barbijos</li><li>Bolsa de arranque</li><li>Bolsa camiseta</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
@@ -273,7 +273,7 @@
 <p>Equipos para jabón líquido, papel toalla intercaladas, papel higiénico institucional, alcohol en gel.</p>
 <ul class="modal-list"><li>Dispensers de jabón y alcohol en gel</li><li>Dispenser papel toalla intercaladas</li><li>Dispenser para Papel higiénico jumbo institucional</li><li>Dispenser para papel bobina</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
@@ -286,7 +286,7 @@
 <p>Palas, escobas, trapos, baldes, mopas, tachos de basura (hogar y profesional).</p>
 <ul class="modal-list"><li>Esponjas lava platos, acero, lana acero</li><li>Escobas, escobillones y plumeros</li><li>Palas de mano y con palo</li><li>Trapos de piso, rejillas, repasadores, microfibras</li><li>Secadores, lampazos y mopas</li><li>Tachos de basura y baldes</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
@@ -299,7 +299,7 @@
 <p>Difusores, perfuminas, fragancias concentradas y ambientales. 1L / 5L.</p>
 <ul class="modal-list"><li>Perfumina textil y de ambiente (varios aromas)</li><li>Aromatizadores de ambiente en aerosol</li><li>Difusores de ambiente</li><li>Equipos de aromatizacion</li><li>Sahumerios y aceites para horniltos</li><li>Aromatizacion de autos</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
@@ -312,7 +312,7 @@
 <p>Derribantes y repelentes en aerosol y liquidos para control de plagas.</p>
 <ul class="modal-list"><li>Repelentes aerosol, crema y liquidos</li><li>Repelntes naturales (aceite citronella)</li><li>Derribantes liquidos (control de plagas)</li><li>Derribantes aerosol</li></ul>
 <div class="cta-row">
-<<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
+<a class="btn btn-primary" href="./assets/docs/CATALOGO-BARRETODO-DISTRIBUIDORA.pdf" target="_blank" rel="noopener" download="Catalogo-Barretodo.pdf">📥 CATÁLOGO</a>
 <a class="btn btn-secondary" href="https://wa.me/541151022954" rel="noopener" target="_blank">💬 WhatsApp</a>
 </div>
 </div>
