--- a/pages/productos.html
+++ b/pages/productos.html
@@ -188,7 +188,7 @@
 <h3 class="f-title">Seguinos</h3>
 <div class="f-social-row">
 <!-- Instagram -->
-<a aria-label="Instagram" class="f-icon" href="https://instagram.com/" target="_blank">
+<a aria-label="Instagram" class="f-icon" href="https://www.instagram.com/barre.todo/" target="_blank">
 <svg fill="none" height="20" stroke="#1F2D2C" stroke-width="1.8" viewbox="0 0 24 24" width="20"><rect height="19" rx="5" ry="5" width="19" x="2.5" y="2.5"></rect><circle cx="12" cy="12" r="4.2"></circle><circle cx="18" cy="6" fill="#1F2D2C" r="1.3" stroke="none"></circle></svg>
 </a>
 <!-- WhatsApp -->
